<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_common_gray">

    <!--标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_titleBar_height"
        android:background="@color/title_bar_color">
        <ImageView
            android:id="@+id/register_titleBar_iv_back"
            style="@style/common_left_back_imageView_style" />
        <TextView
            style="@style/base_textView_style"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/login_titleBar_register"
            android:textSize="@dimen/login_titleBar_login_size"
            android:textColor="@color/textColor_32"/>
    </RelativeLayout>

    <!--用户名框-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_color"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/register_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:inputType="text"
            android:hint="@string/login_input_username" />

    </RelativeLayout>

    <!--密码框-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_color"
        android:layout_marginTop="5dp">
        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:hint="@string/login_input_password_hint" />

        <CheckBox
            android:id="@+id/password_eye"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/password_eye"
            android:button="@null"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <!--确定密码框-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_color"
        android:layout_marginTop="5dp">
        <EditText
            android:id="@+id/register_et_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:inputType="textPassword"
            android:hint="@string/login_input_repassword_hint"/>
        <CheckBox
            android:id="@+id/certain_password_eye"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/password_eye"
            android:button="@null"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_color"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/register_et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:inputType="number"
            android:maxLength="11"
            android:hint="@string/login_input_phoneNumber_hint">
        </EditText>
        <ImageView
            android:id="@+id/register_iv_clear_phoneNumber"
            style="@style/common_clear_input_imageView_style"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_color">
        <EditText
            android:id="@+id/register_et_code"
            style="@style/login_editText_style"
            android:hint="@string/login_input_check_code_hint"
            android:inputType="number"
            android:maxLength="4"/>
        <Button
            android:id="@+id/register_btn_getCode"
            style="@style/login_btn_getCode_style"/>
        <TextView
            android:id="@+id/tip"
            style="@style/login_tip_getCode_style"
            android:visibility="gone" />
        <ImageView
            android:id="@+id/register_iv_clear_code"
            android:layout_toStartOf="@+id/register_btn_getCode"
            android:layout_toLeftOf="@id/tip"
            style="@style/common_clear_input_imageView_style"
            android:visibility="gone"/>
    </RelativeLayout>

    <Button
        android:id="@+id/save_info"
        style="@style/login_btn_style"
        android:enabled="true"
        android:text="注册" />


</LinearLayout>